<resources>
    <string name="app_name">Calctrial</string>
    <string name="ac">AC</string>
    <string name="brackets">()</string>
    <string name="modulo">%</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">✕</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">−</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="_0">0</string>
    <string name="dot">·</string>
    <string name="del">DEL</string>
    <string name="answer">=</string>
</resources>